vyzva web a opravy

--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -33,7 +33,7 @@
   <vyzva$faq$item type="Učitel" title="student zadal licenční klíc a já jeho jméno nevidím v seznamu">
     <i>Student</i> musí nejenom zadat licenční klíč ale i spustit kurz. Také zkuste provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
   </vyzva$faq$item>
-  <vyzva$faq$item type="Učitel" title="mohu pro danou skupiny přidělit jen jeden klíč pro Učitele a další až v případě potřeby?">
+  <vyzva$faq$item type="Učitel" title="mohu pro danou skupinu přidělit jen jeden klíč pro Učitele a další až v případě potřeby?">
     Ano, samozřejmě.
   </vyzva$faq$item>
 
