--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys()"><i class="fa fa-file-excel-o"></i> Seznam studentů do Excelu</div><br />
-        Tento export obsahuje přehled Studijních skupin včetně seznamu <i>Studentů</i> jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snažší rozdání <i>Licenčních klíčů</i> studentům.
+        Tento export obsahuje přehled Studijních skupin včetně seznamu <i>Studentů</i> jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snazší rozdání <i>Licenčních klíčů</i> studentům.
       </div>
       <div class="col-sm-6">
         <div class="btn btn-success btn-lg" ng-click="::ts.downloadSummary()"><i class="fa fa-file-excel-o"></i> Průběžné výsledky studia</div><br />
