--- a/Web4/BlendedAPI/vyzva/Views/managerLangmaster.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerLangmaster.html
@@ -24,13 +24,13 @@
       <td>Chci si zkusit</td>
       <td>Přihlašovací E-mail</td>
       <td>Přihlašovací heslo</td>
-      <td>Licenční klíč</td>
+      <!--<td>Licenční klíč</td>-->
     </tr>
     <tr ng-repeat="user in ts.allUsers">
       <td>{{user.role}}</td>
       <td>{{user.email}}</td>
       <td>heslo</td>
-      <td>{{user.keyStr}}</td>
+      <!--<td>{{user.keyStr}}</td>-->
     </tr>
   </table>
 
