--- a/Web4/BlendedAPI/vyzva/Views/managerSchool.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerSchool.html
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys(false)"><i class="fa fa-file-excel-o"></i> <i>Studijní skupiny</i></div><br />
-            Tento export obsahuje přehled Studijních skupin a klíčů pro <i>Učitele</i>. Využijte jej pro snažší rozdání <i>Licenčních klíčů</i> <i>Učitelům</i>.
+            Tento export obsahuje přehled Studijních skupin a klíčů pro <i>Učitele</i>. Využijte jej pro snazší rozdání <i>Licenčních klíčů</i> <i>Učitelům</i>.
           </div>
           <div class="col-sm-6">
             <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys(true)"><i class="fa fa-file-excel-o"></i> <i>Studijní skupiny</i> (včetně <i>Studentů</i>)</div><br />
@@ -153,8 +153,8 @@
             <div class="btn btn-success btn-lg" ng-click="::ts.downloadSummary(true)"><i class="fa fa-file-excel-o"></i> Průběžné výsledky studia</div><br />
             Přehledy o výuce včetně následujících detailů:
             <ul>
-              <li>kolik vteřin zvuku student nahrál v rámci audio-orální metody</li>
-              <li>čas, strávený studentem při poslechu nahrávek rodilých mluvčích</li>
+              <li>kolik vteřin zvuku <i>Student</i> nahrál v rámci audio-orální metody</li>
+              <li>čas, strávený <i>Studentem</i> při poslechu nahrávek rodilých mluvčích</li>
               <li>skóre, dosažené ve všech cvičeních všech testů a lekcí</li>
               <li>pokrok ve studiu a mnoho dalších údajů</li>
             </ul>
